# news-app

./: .gitignore  README.md  deployment_guide.md
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/alembic/versions/: 18ba451cdacc_add_plan_field.py  2f36ad567c41_add_summary_style.py  30e3eaab3415_add_user_daily_caches_table.py  89bdb6db4286_add_usage_limits.py  9a3b7f36274e_add_sender_address_to_payment_.py  d61aada91422_update_subscription_fk_ondelete.py  da74296d45b0_initial_migration.py
backend/app/: main.py
backend/app/api/: ai.py  auth.py  deps.py  news.py  payments.py  preferences.py  user.py
backend/app/core/: config.py  logging.py  middleware.py  oauth.py  rate_limit.py  security.py  solana.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  ai.py  daily_cache.py  news.py  payment.py  user.py
backend/app/schemas/: __init__.py  ai.py  auth.py  news.py  payment.py  user.py
backend/app/services/: ai_service.py  auth_service.py  currents.py  news_service.py  scheduler.py
backend/app/services/ai_agents/: bias.py  classifier.py  collector.py  explainer.py  gemini_client.py  graph.py  nodes.py  state.py  summarizer.py  types.py
backend/app/tests/: conftest.py  test_auth.py  test_features_e2e.py  test_news.py  test_news_feed.py  test_payments.py  test_usage.py
backend/app/tests/data/: currents_mock.json
backend/app/utils/: errors.py
frontend/: .env.example  index.html  package-lock.json  (+4 more)
(+30 files in other folders)
